--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 
                     <div>
                         <h1>
-                            <a href="index.html" class="logo">HR Crew</a>
+                            <a href="index.html" class="logo">Pflegegram</a>
                             <!-- if logo is image enable this   
           <a class="logo" href="index.html">
             <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
@@ -110,7 +110,7 @@
                                     linkedin</a>
                             </div>
                             <div class="form-input">
-                                <a href="#google-plus" class="google"><span class="fa fa-google-plus"></span> Signin
+                                <a href="#google-plus" class="google"><span class="fa fa-google"></span> Signin
                                     with google</a>
                             </div>
                             <p class="no-margin"> Click “Login” to accept our Terms of Service & Privacy Policy.</p>
