--- a/job-single.html
+++ b/job-single.html
@@ -19,7 +19,7 @@
 
                     <div>
                         <h1>
-                            <a href="index.html" class="logo">HR Crew</a>
+                            <a href="index.html" class="logo">Pflegegram</a>
                             <!-- if logo is image enable this   
           <a class="logo" href="index.html">
             <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
