--- a/about.html
+++ b/about.html
@@ -116,19 +116,19 @@
             </p>
             <div class="feat_top">
               <div class="w3l-features-photo-7-box">
-                <img src="assets/images/job1.png" class="img-responsive" width="50px" alt="" />
+                <img src="images/job1.png" class="img-responsive" width="50px" alt="" />
                 <h5 class="w3l-features-photo-7-box-txt"><a href="#url">Login to portal</a></h5>
                 <p>Proin a diam et dui elit, orci urna vel id neque. Donec sed tempus enim</p>
               </div>
               <div class="w3l-features-photo-7-box">
-                <img src="assets/images/job2.png" class="img-responsive" width="50px" alt="" />
+                <img src="images/job2.png" class="img-responsive" width="50px" alt="" />
                 <h5 class="w3l-features-photo-7-box-txt"><a href="#url">Apply for a job</a></h5>
                 <p>Proin a diam et dui elit, orci urnavel id neque. Donec sed tempus enim</p>
               </div>
             </div>
           </div>
           <div class="w3l-features-photo-7_top-right">
-            <img src="assets/images/blog1.jpg" class="img-responsive" alt="" />
+            <img src="images/blog1.jpg" class="img-responsive" alt="" />
           </div>
         </div>
       </div>
@@ -251,7 +251,7 @@
               </p>
               <div class="testi-grid">
                 <div class="imgTitle">
-                  <img src="assets/images/e1.jpg" class="img-responsive" alt="" />
+                  <img src="images/e1.jpg" class="img-responsive" alt="" />
                 </div>
                 <div class="testi-info">
                   <h6>William</h6>
@@ -268,7 +268,7 @@
               </p>
               <div class="testi-grid">
                 <div class="imgTitle">
-                  <img src="assets/images/e2.jpg" class="img-responsive" alt="" />
+                  <img src="images/e2.jpg" class="img-responsive" alt="" />
                 </div>
                 <div class="testi-info">
                   <h6>Robert</h6>
@@ -285,7 +285,7 @@
               </p>
               <div class="testi-grid">
                 <div class="imgTitle">
-                  <img src="assets/images/e3.jpg" class="img-responsive" alt="" />
+                  <img src="images/e3.jpg" class="img-responsive" alt="" />
                 </div>
                 <div class="testi-info">
                   <h6>Michael </h6>
@@ -342,8 +342,8 @@
           </div>
           <div class="footer17-top-left5_sur">
             <h6>Mobile app </h6>
-            <a href="#playstore"><img src="assets/images/googleplay.png" class="img-responsive" alt=""></a>
-            <a href="#appstore"><img src="assets/images/appstore.png" class="img-responsive" alt=""></a>
+            <a href="#playstore"><img src="images/googleplay.png" class="img-responsive" alt=""></a>
+            <a href="#appstore"><img src="images/appstore.png" class="img-responsive" alt=""></a>
           </div>
         </div>
         <div class="footer-left">
