--- a/blog-single.html
+++ b/blog-single.html
@@ -111,7 +111,7 @@
                     <a href="#living" class="tag">Interview</a>
                     <h6>October 11th, 2019</h6>
                     <h4 class="heading-no-margin">What to wear to a job interview</h4>
-                    <img src="assets/images/blog8.jpg" class="img-responsive margin-top" alt="" />
+                    <img src="images/blog8.jpg" class="img-responsive margin-top" alt="" />
                     <h4 class="heading"> General guidelines for what to wear to an interview</h4>
                     <p>Fusce faucibus ante vitae justo efficitur elementum. Donec ipsum faucibus arcu elementum, luctus
                         justo. ac purus semper. Fusce faucibus ante vitae justo efficitur elementum. Donec ipsum
@@ -216,8 +216,8 @@
                     </div>
                     <div class="footer17-top-left5_sur">
                         <h6>Mobile app </h6>
-                        <a href="#playstore"><img src="assets/images/googleplay.png" class="img-responsive" alt=""></a>
-                        <a href="#appstore"><img src="assets/images/appstore.png" class="img-responsive" alt=""></a>
+                        <a href="#playstore"><img src="images/googleplay.png" class="img-responsive" alt=""></a>
+                        <a href="#appstore"><img src="images/appstore.png" class="img-responsive" alt=""></a>
                     </div>
                 </div>
                 <div class="footer-left">
