--- a/blog.html
+++ b/blog.html
@@ -109,7 +109,7 @@
 			<div class="wrapper">
 				<div class="d-grid">
 					<div class="grids5-info">
-						<a href="blog-single.html"><img src="assets/images/blog1.jpg" alt="" /></a>
+						<a href="blog-single.html"><img src="images/blog1.jpg" alt="" /></a>
 						<div class="blog-info">
 							<h5>October 7, 2019.</h5>
 							<h4><a href="blog-single.html">What to wear to a job interview</a></h4>
@@ -118,7 +118,7 @@
 						</div>
 					</div>
 					<div class="grids5-info">
-						<a href="blog-single.html"><img src="assets/images/blog2.jpg" alt="" /></a>
+						<a href="blog-single.html"><img src="images/blog2.jpg" alt="" /></a>
 						<div class="blog-info">
 							<h5>October 7, 2019.</h5>
 							<h4><a href="blog-single.html">Resume Writing Do's and Don'ts</a></h4>
@@ -127,7 +127,7 @@
 						</div>
 					</div>
 					<div class="grids5-info">
-						<a href="blog-single.html"><img src="assets/images/blog3.jpg" alt="" /></a>
+						<a href="blog-single.html"><img src="images/blog3.jpg" alt="" /></a>
 						<div class="blog-info">
 							<h5>October 7, 2019.</h5>
 							<h4><a href="blog-single.html">What to wear to a job interview</a></h4>
@@ -136,7 +136,7 @@
 						</div>
 					</div>
 					<div class="grids5-info">
-						<a href="blog-single.html"><img src="assets/images/blog4.jpg" alt="" /></a>
+						<a href="blog-single.html"><img src="images/blog4.jpg" alt="" /></a>
 						<div class="blog-info">
 							<h5>October 7, 2019.</h5>
 							<h4><a href="blog-single.html">What to wear to a job interview</a></h4>
@@ -145,7 +145,7 @@
 						</div>
 					</div>
 					<div class="grids5-info">
-						<a href="blog-single.html"><img src="assets/images/blog5.jpg" alt="" /></a>
+						<a href="blog-single.html"><img src="images/blog5.jpg" alt="" /></a>
 						<div class="blog-info">
 							<h5>October 7, 2019.</h5>
 							<h4><a href="blog-single.html">Resume Writing Do's and Don'ts</a></h4>
@@ -154,7 +154,7 @@
 						</div>
 					</div>
 					<div class="grids5-info">
-						<a href="blog-single.html"><img src="assets/images/blog6.jpg" alt="" /></a>
+						<a href="blog-single.html"><img src="images/blog6.jpg" alt="" /></a>
 						<div class="blog-info">
 							<h5>October 7, 2019.</h5>
 							<h4><a href="blog-single.html">What to wear to a job interview</a></h4>
@@ -163,7 +163,7 @@
 						</div>
 					</div>
 					<div class="grids5-info">
-						<a href="blog-single.html"><img src="assets/images/blog7.jpg" alt="" /></a>
+						<a href="blog-single.html"><img src="images/blog7.jpg" alt="" /></a>
 						<div class="blog-info">
 							<h5>October 7, 2019.</h5>
 							<h4><a href="blog-single.html">What to wear to a job interview</a></h4>
@@ -172,7 +172,7 @@
 						</div>
 					</div>
 					<div class="grids5-info">
-						<a href="blog-single.html"><img src="assets/images/blog8.jpg" alt="" /></a>
+						<a href="blog-single.html"><img src="images/blog8.jpg" alt="" /></a>
 						<div class="blog-info">
 							<h5>October 7, 2019.</h5>
 							<h4><a href="blog-single.html">Resume Writing Do's and Don'ts</a></h4>
@@ -181,7 +181,7 @@
 						</div>
 					</div>
 					<div class="grids5-info">
-						<a href="blog-single.html"><img src="assets/images/blog9.jpg" alt="" /></a>
+						<a href="blog-single.html"><img src="images/blog9.jpg" alt="" /></a>
 						<div class="blog-info">
 							<h5>October 7, 2019.</h5>
 							<h4><a href="blog-single.html">What to wear to a job interview</a></h4>
@@ -237,8 +237,8 @@
 					</div>
 					<div class="footer17-top-left5_sur">
 						<h6>Mobile app </h6>
-						<a href="#playstore"><img src="assets/images/googleplay.png" class="img-responsive" alt=""></a>
-						<a href="#appstore"><img src="assets/images/appstore.png" class="img-responsive" alt=""></a>
+						<a href="#playstore"><img src="images/googleplay.png" class="img-responsive" alt=""></a>
+						<a href="#appstore"><img src="images/appstore.png" class="img-responsive" alt=""></a>
 					</div>
 				</div>
 				<div class="footer-left">
