--- a/candidate-single.html
+++ b/candidate-single.html
@@ -92,7 +92,7 @@
         <div class="wrapper">
             <div class="d-grid employer-grid">
                 <div class="employer-title">
-                    <img src="assets/images/candidate1.jpg" class="img-responsive" alt="" />
+                    <img src="images/candidate1.jpg" class="img-responsive" alt="" />
                 </div>
                 <div class="employer-name">
                     <h4>Elizabeth lisa</h4>
@@ -299,23 +299,23 @@
                         <aside class="posts single-left-inner">
                             <h5 class="card-title">Candidate Portfolio</h5>
                             <div class="portfolio-grid">
-                                <a href="#portfolio"><img src="assets/images/blog1.jpg" class="img-responsive"
+                                <a href="#portfolio"><img src="images/blog1.jpg" class="img-responsive"
                                         alt="" /></a>
-                                <a href="#portfolio"><img src="assets/images/blog2.jpg" class="img-responsive"
+                                <a href="#portfolio"><img src="images/blog2.jpg" class="img-responsive"
                                         alt="" /></a>
-                                <a href="#portfolio"><img src="assets/images/blog3.jpg" class="img-responsive"
+                                <a href="#portfolio"><img src="images/blog3.jpg" class="img-responsive"
                                         alt="" /></a>
-                                <a href="#portfolio"><img src="assets/images/blog4.jpg" class="img-responsive"
+                                <a href="#portfolio"><img src="images/blog4.jpg" class="img-responsive"
                                         alt="" /></a>
-                                <a href="#portfolio"><img src="assets/images/blog5.jpg" class="img-responsive"
+                                <a href="#portfolio"><img src="images/blog5.jpg" class="img-responsive"
                                         alt="" /></a>
-                                <a href="#portfolio"><img src="assets/images/blog6.jpg" class="img-responsive"
+                                <a href="#portfolio"><img src="images/blog6.jpg" class="img-responsive"
                                         alt="" /></a>
-                                <a href="#portfolio"><img src="assets/images/blog7.jpg" class="img-responsive"
+                                <a href="#portfolio"><img src="images/blog7.jpg" class="img-responsive"
                                         alt="" /></a>
-                                <a href="#portfolio"><img src="assets/images/blog1.jpg" class="img-responsive"
+                                <a href="#portfolio"><img src="images/blog1.jpg" class="img-responsive"
                                         alt="" /></a>
-                                <a href="#portfolio"><img src="assets/images/blog2.jpg" class="img-responsive"
+                                <a href="#portfolio"><img src="images/blog2.jpg" class="img-responsive"
                                         alt="" /></a>
                             </div>
                         </aside>
@@ -371,8 +371,8 @@
                     </div>
                     <div class="footer17-top-left5_sur">
                         <h6>Mobile app </h6>
-                        <a href="#playstore"><img src="assets/images/googleplay.png" class="img-responsive" alt=""></a>
-                        <a href="#appstore"><img src="assets/images/appstore.png" class="img-responsive" alt=""></a>
+                        <a href="#playstore"><img src="images/googleplay.png" class="img-responsive" alt=""></a>
+                        <a href="#appstore"><img src="images/appstore.png" class="img-responsive" alt=""></a>
                     </div>
                 </div>
                 <div class="footer-left">
