--- a/candidate.html
+++ b/candidate.html
@@ -109,7 +109,7 @@
 				<div class="d-grid grid-col-4 align-center main-contteam-33">
 					<div class="team-main-19">
 						<div class="column-19">
-							<a href="candidate-single.html"><img class="image" src="assets/images/c5.jpg" alt=" "></a>
+							<a href="candidate-single.html"><img class="image" src="images/c5.jpg" alt=" "></a>
 						</div>
 						<div class="right-team-9">
 							<div class="sub-grid-33">
@@ -128,7 +128,7 @@
 					</div>
 					<div class="team-main-19">
 						<div class="column-19">
-							<a href="candidate-single.html"><img class="image" src="assets/images/c6.jpg" alt=" "></a>
+							<a href="candidate-single.html"><img class="image" src="images/c6.jpg" alt=" "></a>
 						</div>
 						<div class="right-team-9">
 							<div class="sub-grid-33">
@@ -147,7 +147,7 @@
 					</div>
 					<div class="team-main-19">
 						<div class="column-19">
-							<a href="candidate-single.html"><img class="image" src="assets/images/c7.jpg" alt=" "></a>
+							<a href="candidate-single.html"><img class="image" src="images/c7.jpg" alt=" "></a>
 						</div>
 						<div class="right-team-9">
 							<div class="sub-grid-33">
@@ -166,7 +166,7 @@
 					</div>
 					<div class="team-main-19">
 						<div class="column-19">
-							<a href="candidate-single.html"><img class="image" src="assets/images/e4.jpg" alt=" "></a>
+							<a href="candidate-single.html"><img class="image" src="images/e4.jpg" alt=" "></a>
 						</div>
 						<div class="right-team-9">
 							<div class="sub-grid-33">
@@ -185,7 +185,7 @@
 					</div>
 					<div class="team-main-19">
 						<div class="column-19">
-							<a href="candidate-single.html"><img class="image" src="assets/images/c1.jpg" alt=" "></a>
+							<a href="candidate-single.html"><img class="image" src="images/c1.jpg" alt=" "></a>
 						</div>
 						<div class="right-team-9">
 							<div class="sub-grid-33">
@@ -204,7 +204,7 @@
 					</div>
 					<div class="team-main-19">
 						<div class="column-19">
-							<a href="candidate-single.html"><img class="image" src="assets/images/c2.jpg" alt=" "></a>
+							<a href="candidate-single.html"><img class="image" src="images/c2.jpg" alt=" "></a>
 						</div>
 						<div class="right-team-9">
 							<div class="sub-grid-33">
@@ -223,7 +223,7 @@
 					</div>
 					<div class="team-main-19">
 						<div class="column-19">
-							<a href="candidate-single.html"><img class="image" src="assets/images/c3.jpg" alt=" "></a>
+							<a href="candidate-single.html"><img class="image" src="images/c3.jpg" alt=" "></a>
 						</div>
 						<div class="right-team-9">
 							<div class="sub-grid-33">
@@ -242,7 +242,7 @@
 					</div>
 					<div class="team-main-19">
 						<div class="column-19">
-							<a href="candidate-single.html"><img class="image" src="assets/images/c4.jpg" alt=" "></a>
+							<a href="candidate-single.html"><img class="image" src="images/c4.jpg" alt=" "></a>
 						</div>
 						<div class="right-team-9">
 							<div class="sub-grid-33">
@@ -308,8 +308,8 @@
 					</div>
 					<div class="footer17-top-left5_sur">
 						<h6>Mobile app </h6>
-						<a href="#playstore"><img src="assets/images/googleplay.png" class="img-responsive" alt=""></a>
-						<a href="#appstore"><img src="assets/images/appstore.png" class="img-responsive" alt=""></a>
+						<a href="#playstore"><img src="images/googleplay.png" class="img-responsive" alt=""></a>
+						<a href="#appstore"><img src="images/appstore.png" class="img-responsive" alt=""></a>
 					</div>
 				</div>
 				<div class="footer-left">
