--- a/email-template.html
+++ b/email-template.html
@@ -47,7 +47,7 @@
                      <td>
                          <table class="ban" width="100%" border="0" align="center" cellpadding="0" cellspacing="0"
                              bgcolor="FFFFFF"
-                             style="background:url(assets/images/banner.jpg); background-size:cover; position:relative;">
+                             style="background:url(images/banner.jpg); background-size:cover; position:relative;">
                              <tbody class="layer"  style=" padding:10em 1em; display:block">
                                  <!--head_part-->
                                  <tr>
@@ -164,7 +164,7 @@
                                                      <tr>
                                                          <td align="center">
 
-                                                             <img src="assets/images/blog1.jpg" alt=" "
+                                                             <img src="images/blog1.jpg" alt=" "
                                                                  class="w3ls_img_list img-responsive" />
 
                                                          </td>
@@ -215,7 +215,7 @@
                                                      <tr>
                                                          <td align="center">
 
-                                                             <img src="assets/images/blog2.jpg" alt=" "
+                                                             <img src="images/blog2.jpg" alt=" "
                                                                  class="w3ls_img_list" />
 
                                                          </td>
@@ -266,7 +266,7 @@
                                                      <tr>
                                                          <td align="center">
 
-                                                             <img src="assets/images/blog3.jpg" alt=" "
+                                                             <img src="images/blog3.jpg" alt=" "
                                                                  class="w3ls_img_list" />
 
                                                          </td>
@@ -361,7 +361,7 @@
                                         <tbody>
                                             <tr>
                                                 <td class="scale-center-both" style="padding: 0px 0px 0px 0px;"><a
-                                                        href="#"><img src="assets/images/blog8.jpg" width="300"
+                                                        href="#"><img src="images/blog8.jpg" width="300"
                                                            style="display: block;"></a></td>
                                             </tr>
 
@@ -445,7 +445,7 @@
                                         <tbody>
                                             <tr align="center">
                                                 <td class="scale-center-both" style="padding: 0px 0px 0px 0px;"><a
-                                                        href="#"><img src="assets/images/blog9.jpg" width="300"
+                                                        href="#"><img src="images/blog9.jpg" width="300"
                                                             style="display: block;"></a>
                                                 </td>
                                             </tr>
@@ -480,7 +480,7 @@
                 width="700px" style="margin:0 auto;">
                 <tr>
                     <td class="last-bg"
-                        style="background-image: url(assets/images/banner1.jpg); background-size:cover;position:relative;">
+                        style="background-image: url(images/banner1.jpg); background-size:cover;position:relative;">
                         <div class="overlay-lavi">
                             <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%"
                                 class="content-text">
@@ -528,7 +528,7 @@
                                 <td>
 
                                     <table width="300" border="0" cellspacing="0" cellpadding="0" align="right"
-                                        style=" font-size: 14px; color: #9b9b9b; background-image: url(assets/images/mobile.jpg); background-size:cover; background-repeat:no-repeat; background-position: center center;"
+                                        style=" font-size: 14px; color: #9b9b9b; background-image: url(images/mobile.jpg); background-size:cover; background-repeat:no-repeat; background-position: center center;"
                                         class="scale-30perc">
                                         <tr>
                                             <td class="scale-center-both" align="center" height="430"
@@ -570,11 +570,11 @@
                                                 <br />
                                                 <a href="#app" class="app"
                                                     style="display:block; border:0;"><img
-                                                        src="assets/images/googleplay.png"
+                                                        src="images/googleplay.png"
                                                         alt="" border="0"></a>
                                                 <a href="#app"  class="app"
                                                     style="display:block; border:0;"><img
-                                                        src="assets/images/appstore.png"
+                                                        src="images/appstore.png"
                                                         alt="" border="0"></a>
                                             </td>
                                         </tr>
@@ -694,17 +694,17 @@
                                                                                  <tr>
                                                                                      <td><a href="#facebook"
                                                                                              style="display:block; border:0;"><img
-                                                                                                 src="assets/images/ef1.png"
+                                                                                                 src="images/ef1.png"
                                                                                                  alt="" border="0"></a></td>
                                                                                      <td>&nbsp;</td>
                                                                                      <td><a href="#twitter"
                                                                                              style="display:block; border:0;"><img
-                                                                                                 src="assets/images/ef2.png"
+                                                                                                 src="images/ef2.png"
                                                                                                  alt="" border="0"></a></td>
                                                                                      <td>&nbsp;</td>
                                                                                      <td><a href="#google"
                                                                                              style="display:block; border:0;"><img
-                                                                                                 src="assets/images/ef3.png"
+                                                                                                 src="images/ef3.png"
                                                                                                  alt="" border="0"></a></td>
                                                                                  </tr>
 
