--- a/pricing.html
+++ b/pricing.html
@@ -292,7 +292,7 @@
 			<div class="wrapper">
 				<div class="d-grid">
 					<div class="grids5-info">
-						<a href="blog-single.html"><img src="assets/images/blog1.jpg" alt="" /></a>
+						<a href="blog-single.html"><img src="images/blog1.jpg" alt="" /></a>
 						<div class="blog-info">
 							<h5>October 7, 2019.</h5>
 							<h4><a href="blog-single.html">What to wear to a job interview</a></h4>
@@ -301,7 +301,7 @@
 						</div>
 					</div>
 					<div class="grids5-info">
-						<a href="blog-single.html"><img src="assets/images/blog2.jpg" alt="" /></a>
+						<a href="blog-single.html"><img src="images/blog2.jpg" alt="" /></a>
 						<div class="blog-info">
 							<h5>October 7, 2019.</h5>
 							<h4><a href="blog-single.html">Resume Writing Do's and Don'ts</a></h4>
@@ -310,7 +310,7 @@
 						</div>
 					</div>
 					<div class="grids5-info">
-						<a href="blog-single.html"><img src="assets/images/blog3.jpg" alt="" /></a>
+						<a href="blog-single.html"><img src="images/blog3.jpg" alt="" /></a>
 						<div class="blog-info">
 							<h5>October 7, 2019.</h5>
 							<h4><a href="blog-single.html">What to wear to a job interview</a></h4>
@@ -370,8 +370,8 @@
 					</div>
 					<div class="footer17-top-left5_sur">
 						<h6>Mobile app </h6>
-						<a href="#playstore"><img src="assets/images/googleplay.png" class="img-responsive" alt=""></a>
-						<a href="#appstore"><img src="assets/images/appstore.png" class="img-responsive" alt=""></a>
+						<a href="#playstore"><img src="images/googleplay.png" class="img-responsive" alt=""></a>
+						<a href="#appstore"><img src="images/appstore.png" class="img-responsive" alt=""></a>
 					</div>
 				</div>
 				<div class="footer-left">
