--- a/search-results.html
+++ b/search-results.html
@@ -124,7 +124,7 @@
                     <label>3 results found for your search</label>
                     <div class="w3l-text-styles-31-top_sur">
                         <div class="w3l-text-styles-31-left_sur">
-                            <a href="#url"><img src="assets/images/e1.jpg" class="img img-responsive" alt=""></a>
+                            <a href="#url"><img src="images/e1.jpg" class="img img-responsive" alt=""></a>
                         </div>
                         <div class="w3l-text-styles-31-right_sur">
                             <h5><a href="#url">Et quasi architecto beatae vitae dicta sunt</a></h5>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="w3l-text-styles-31-top_sur">
                         <div class="w3l-text-styles-31-left_sur">
-                            <a href="#url"><img src="assets/images/e2.jpg" class="img img-responsive" alt=""></a>
+                            <a href="#url"><img src="images/e2.jpg" class="img img-responsive" alt=""></a>
                         </div>
                         <div class="w3l-text-styles-31-right_sur">
                             <h5><a href="#url">Nemo enim ipsam voluptatem</a></h5>
@@ -147,7 +147,7 @@
                     </div>
                     <div class="w3l-text-styles-31-top_sur">
                         <div class="w3l-text-styles-31-left_sur">
-                            <a href="#url"><img src="assets/images/e3.jpg" class="img img-responsive" alt=""></a>
+                            <a href="#url"><img src="images/e3.jpg" class="img img-responsive" alt=""></a>
                         </div>
                         <div class="w3l-text-styles-31-right_sur">
                             <h5><a href="#url">Neque porro quisquam est</a></h5>
@@ -206,8 +206,8 @@
                     </div>
                     <div class="footer17-top-left5_sur">
                         <h6>Mobile app </h6>
-                        <a href="#playstore"><img src="assets/images/googleplay.png" class="img-responsive" alt=""></a>
-                        <a href="#appstore"><img src="assets/images/appstore.png" class="img-responsive" alt=""></a>
+                        <a href="#playstore"><img src="images/googleplay.png" class="img-responsive" alt=""></a>
+                        <a href="#appstore"><img src="images/appstore.png" class="img-responsive" alt=""></a>
                     </div>
                 </div>
                 <div class="footer-left">
