--- a/team-single.html
+++ b/team-single.html
@@ -92,7 +92,7 @@
         <div class="wrapper">
             <div class="d-grid employer-grid">
                 <div class="employer-title">
-                    <img src="assets/images/employer1.jpg" class="img-responsive" alt="" />
+                    <img src="images/employer1.jpg" class="img-responsive" alt="" />
                 </div>
                 <div class="employer-name">
                     <h4>Alexander smith</h4>
@@ -143,7 +143,7 @@
                                 <div class="grid grid-column-2">
                                     <div class="column1">
                                         <a href="#img5">
-                                            <img src="assets/images/job4.png" width="60px" alt=""
+                                            <img src="images/job4.png" width="60px" alt=""
                                                 class="img-responsive" />
                                         </a>
                                         <div class="job-info">
@@ -167,7 +167,7 @@
                                 <div class="grid grid-column-2">
                                     <div class="column1">
                                         <a href="#img5">
-                                            <img src="assets/images/job3.png" width="60px" alt=""
+                                            <img src="images/job3.png" width="60px" alt=""
                                                 class="img-responsive" />
                                         </a>
                                         <div class="job-info">
@@ -305,8 +305,8 @@
                     </div>
                     <div class="footer17-top-left5_sur">
                         <h6>Mobile app </h6>
-                        <a href="#playstore"><img src="assets/images/googleplay.png" class="img-responsive" alt=""></a>
-                        <a href="#appstore"><img src="assets/images/appstore.png" class="img-responsive" alt=""></a>
+                        <a href="#playstore"><img src="images/googleplay.png" class="img-responsive" alt=""></a>
+                        <a href="#appstore"><img src="images/appstore.png" class="img-responsive" alt=""></a>
                     </div>
                 </div>
                 <div class="footer-left">
