--- a/team.html
+++ b/team.html
@@ -110,7 +110,7 @@
 					<div class="team-main-29">
 						<div class="column-29">
 							<a href="team-single.html">
-								<img class="img-responsive" src="assets/images/e1.jpg" alt=" ">
+								<img class="img-responsive" src="images/e1.jpg" alt=" ">
 							</a>
 							<div class="right-team-9">
 								<h6><a href="team" class="title-team-29">Constanza Mariano</a></h6>
@@ -127,7 +127,7 @@
 					<div class="team-main-29">
 						<div class="column-29">
 							<a href="team-single.html">
-								<img class="img-responsive" src="assets/images/e2.jpg" alt=" ">
+								<img class="img-responsive" src="images/e2.jpg" alt=" ">
 							</a>
 							<div class="right-team-9">
 								<h6><a href="team" class="title-team-29">Leo Knight</a></h6>
@@ -144,7 +144,7 @@
 					<div class="team-main-29">
 						<div class="column-29">
 							<a href="team-single.html">
-								<img class="img-responsive" src="assets/images/e3.jpg" alt=" ">
+								<img class="img-responsive" src="images/e3.jpg" alt=" ">
 							</a>
 							<div class="right-team-9">
 								<h6><a href="team" class="title-team-29">Gauthier Drewitt</a></h6>
@@ -161,7 +161,7 @@
 					<div class="team-main-29">
 						<div class="column-29">
 							<a href="team-single.html">
-								<img class="img-responsive" src="assets/images/e4.jpg" alt=" ">
+								<img class="img-responsive" src="images/e4.jpg" alt=" ">
 							</a>
 							<div class="right-team-9">
 								<h6><a href="team" class="title-team-29">Sergio Pliego</a></h6>
@@ -178,7 +178,7 @@
 					<div class="team-main-29">
 						<div class="column-29">
 							<a href="team-single.html">
-								<img class="img-responsive" src="assets/images/e5.jpg" alt=" ">
+								<img class="img-responsive" src="images/e5.jpg" alt=" ">
 							</a>
 							<div class="right-team-9">
 								<h6><a href="team" class="title-team-29">Tamas Bunce</a></h6>
@@ -195,7 +195,7 @@
 					<div class="team-main-29">
 						<div class="column-29">
 							<a href="team-single.html">
-								<img class="img-responsive" src="assets/images/e6.jpg" alt=" ">
+								<img class="img-responsive" src="images/e6.jpg" alt=" ">
 							</a>
 							<div class="right-team-9">
 								<h6><a href="team" class="title-team-29">Gabriel Soares</a></h6>
@@ -212,7 +212,7 @@
 					<div class="team-main-29">
 						<div class="column-29">
 							<a href="team-single.html">
-								<img class="img-responsive" src="assets/images/c1.jpg" alt=" ">
+								<img class="img-responsive" src="images/c1.jpg" alt=" ">
 							</a>
 							<div class="right-team-9">
 								<h6><a href="team" class="title-team-29">Salma Fonseca</a></h6>
@@ -229,7 +229,7 @@
 					<div class="team-main-29">
 						<div class="column-29">
 							<a href="team-single.html">
-								<img class="img-responsive" src="assets/images/c2.jpg" alt=" ">
+								<img class="img-responsive" src="images/c2.jpg" alt=" ">
 							</a>
 							<div class="right-team-9">
 								<h6><a href="team" class="title-team-29">Jaclynn Bradley</a></h6>
@@ -246,7 +246,7 @@
 					<div class="team-main-29">
 						<div class="column-29">
 							<a href="team-single.html">
-								<img class="img-responsive" src="assets/images/c3.jpg" alt=" ">
+								<img class="img-responsive" src="images/c3.jpg" alt=" ">
 							</a>
 							<div class="right-team-9">
 								<h6><a href="team" class="title-team-29">Kenjo Assou</a></h6>
@@ -309,8 +309,8 @@
 					</div>
 					<div class="footer17-top-left5_sur">
 						<h6>Mobile app </h6>
-						<a href="#playstore"><img src="assets/images/googleplay.png" class="img-responsive" alt=""></a>
-						<a href="#appstore"><img src="assets/images/appstore.png" class="img-responsive" alt=""></a>
+						<a href="#playstore"><img src="images/googleplay.png" class="img-responsive" alt=""></a>
+						<a href="#appstore"><img src="images/appstore.png" class="img-responsive" alt=""></a>
 					</div>
 				</div>
 				<div class="footer-left">
