--- a/services.html
+++ b/services.html
@@ -114,7 +114,7 @@
                                 <div class="grid grid-column-2">
                                     <div class="column1">
                                         <a href="#img5">
-                                            <img src="assets/images/job4.png" width="60px" alt=""
+                                            <img src="images/job4.png" width="60px" alt=""
                                                 class="img-responsive" />
                                         </a>
                                         <div class="job-info">
@@ -138,7 +138,7 @@
                                 <div class="grid grid-column-2">
                                     <div class="column1">
                                         <a href="#img5">
-                                            <img src="assets/images/job3.png" width="60px" alt=""
+                                            <img src="images/job3.png" width="60px" alt=""
                                                 class="img-responsive" />
                                         </a>
                                         <div class="job-info">
@@ -162,7 +162,7 @@
                                 <div class="grid grid-column-2">
                                     <div class="column1">
                                         <a href="#img5">
-                                            <img src="assets/images/job4.png" width="60px" alt=""
+                                            <img src="images/job4.png" width="60px" alt=""
                                                 class="img-responsive" />
                                         </a>
                                         <div class="job-info">
@@ -186,7 +186,7 @@
                                 <div class="grid grid-column-2">
                                     <div class="column1">
                                         <a href="#img5">
-                                            <img src="assets/images/job3.png" width="60px" alt=""
+                                            <img src="images/job3.png" width="60px" alt=""
                                                 class="img-responsive" />
                                         </a>
                                         <div class="job-info">
@@ -210,7 +210,7 @@
                                 <div class="grid grid-column-2">
                                     <div class="column1">
                                         <a href="#img5">
-                                            <img src="assets/images/job4.png" width="60px" alt=""
+                                            <img src="images/job4.png" width="60px" alt=""
                                                 class="img-responsive" />
                                         </a>
                                         <div class="job-info">
@@ -234,7 +234,7 @@
                                 <div class="grid grid-column-2">
                                     <div class="column1">
                                         <a href="#img5">
-                                            <img src="assets/images/job3.png" width="60px" alt=""
+                                            <img src="images/job3.png" width="60px" alt=""
                                                 class="img-responsive" />
                                         </a>
                                         <div class="job-info">
@@ -373,8 +373,8 @@
                     </div>
                     <div class="footer17-top-left5_sur">
                         <h6>Mobile app </h6>
-                        <a href="#playstore"><img src="assets/images/googleplay.png" class="img-responsive" alt=""></a>
-                        <a href="#appstore"><img src="assets/images/appstore.png" class="img-responsive" alt=""></a>
+                        <a href="#playstore"><img src="images/googleplay.png" class="img-responsive" alt=""></a>
+                        <a href="#appstore"><img src="images/appstore.png" class="img-responsive" alt=""></a>
                     </div>
                 </div>
                 <div class="footer-left">
