--- a/timeline.html
+++ b/timeline.html
@@ -211,8 +211,8 @@
                     </div>
                     <div class="footer17-top-left5_sur">
                         <h6>Mobile app </h6>
-                        <a href="#playstore"><img src="assets/images/googleplay.png" class="img-responsive" alt=""></a>
-                        <a href="#appstore"><img src="assets/images/appstore.png" class="img-responsive" alt=""></a>
+                        <a href="#playstore"><img src="images/googleplay.png" class="img-responsive" alt=""></a>
+                        <a href="#appstore"><img src="images/appstore.png" class="img-responsive" alt=""></a>
                     </div>
                 </div>
                 <div class="footer-left">
